--- a/pages/index.css
+++ b/pages/index.css
@@ -2,4 +2,10 @@
     min-width: 1100px;
     max-width: 1600px; 
     margin: 0 auto;
+    font-family: "Inter",Arial, serif;
+  font-optical-sizing: auto;
+  font-size: 16px;
+  line-height: 20px;
 }
+
+  
