--- a/pages/index.css
+++ b/pages/index.css
@@ -28,28 +28,30 @@
   justify-content: space-between;
   width: 100%;
   height: 80px;
+  position:relative;
+  border-color: blue; /*quitar al final*/
 }
 /* nav__log se puede usar con posición relativa */
 .nav__logo {
   width: 105px;
   height: 39px;
-  position: relative;
+  position: absolute;
   top: 30px;
-
-}
-
-.header__span-accent{
+  left: 30px;
 }
 
 .nav__links {
-  display: flex;
-  flex-direction: row;
-  column-gap: 20px;
+ margin:0 auto;
+ padding: 0;
+  position:absolute;
+  top: 30px;
+  right: 30px;
+
+}
+.nav__link_contactos{
+  position:relative;
   list-style-type: none;
-  margin: 8px 0 0;
-  height: 72px;
-  justify-content: space-around;
-  padding: 0;
+
 }
 
 .nav__link {
@@ -57,18 +59,15 @@
   text-decoration: none;
   font-weight: bold;
 }
-
-.header__content {
-  display: flex;
-  justify-content: space-between;
-}
 .header__text-container {
+  max-width: 709px;
+}
+.header__span-accent{
 }
 .header__title {
   font-size: 62px;
   line-height: 76px;
   font-weight: 500;
-  max-width: 635px;
   margin: 128px 0 0;
   padding: 0;
 }
@@ -76,7 +75,7 @@
 .header__description {
   font-size: 20px;
   line-height: 30px;
-  max-width: 515px;
+  max-width: 683px;
   margin: 32px 0 0;
   padding: 0;
 }
