--- a/pages/index.css
+++ b/pages/index.css
@@ -1,63 +1,63 @@
+*{
+ margin: 0px;
+padding: 0px;
+box-sizing: border-box;
+} /*elimina los margenes por defecto del navegador*/
+
 .page{
     min-width: 1100px;
-    max-width: 1600px; 
-    margin: 0 auto;
-    font-family: "Inter",Arial, serif;
-  font-size: 16px;
-  line-height: 20px;
+    max-width: 1600px;
+    height: 100vh;
 }
 
 
 .header {
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  padding: 30px 80px 40px;
-  position: relative;
-  box-sizing: border-box;
-  background-color: #FFFFFF;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
+  min-height: 720px;/* de acuerdo a brief */
+  max-height: 800px;/* de acuerdo a brief */
+  background-color: #FFFFFF;/* de acuerdo a brief */
+  background-image: url(../images/background_header.svg);/* de acuerdo a brief */
+  background-repeat: no-repeat;/* de acuerdo a brief */
+  background-size: cover;/* de acuerdo a brief */
+  background-position: 50% 50%;/* de acuerdo a brief */
 }
 
 .nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   width: 100%;
   height: 80px;
-  position:relative;
-  border-color: blue; /*quitar al final*/
+  display: flex;
+  justify-content: space-between;
 }
-/* nav__log se puede usar con posición relativa */
+
 .nav__logo {
-  width: 105px;
-  height: 39px;
-  position: absolute;
-  top: 30px;
-  left: 30px;
+  width: 105px;/* de acuerdo a brief */
+  height: 39px;/* de acuerdo a brief */
+  position: relative; /*de acuerdo a brief */
+  top: 30px;/* de acuerdo a brief */
+  left: 30px;/* de acuerdo a brief */
 }
+
 
 .nav__links {
- margin:0 auto;
- padding: 0;
-  position:absolute;
-  top: 30px;
-  right: 30px;
-
-}
-.nav__link_contactos{
-  position:relative;
+  display:flex;
+  flex-direction: row;/*utilizarlo como bloque*/
+  justify-content: space-between;
+  column-gap: 20px;
   list-style-type: none;
-
+  margin: 30px 80px 0 0;
 }
 
 .nav__link {
   color: #000000;
   text-decoration: none;
-  font-weight: bold;
+  font-family: "Inter", Arial, serif;
+  font-style:normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.header{
+
 }
 .header__text-container {
   max-width: 709px;
@@ -65,9 +65,12 @@
 .header__span-accent{
 }
 .header__title {
-  font-size: 62px;
-  line-height: 76px;
-  font-weight: 500;
+  font-family: "Noto-serif",'Times New Roman', serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 72px;
+  color:#2f80ed;
   margin: 128px 0 0;
   padding: 0;
 }
@@ -81,8 +84,11 @@
 }
 /*header__image se puede usar con posición absoluta*/
 .header__image {
-  max-width: 636px;
-  text-align: center;
+height: 568px;
+width: 646px;
+position: absolute;
+top: 124px;
+right: 5px;
 }
 
 .header__footer {
