--- a/pages/index.css
+++ b/pages/index.css
@@ -36,13 +36,12 @@ box-sizing: border-box;
   left: 30px;/* de acuerdo a brief */
 }
 
-
 .nav__links {
   display:flex;
   flex-direction: row;/*utilizarlo como bloque*/
   justify-content: space-between;
-  column-gap: 20px;
-  list-style-type: none;
+  column-gap: 20px; /*de acuerdo al brief*/
+  list-style-type: none; /*de acuerdo al brief*/
   margin: 30px 80px 0 0;
 }
 
@@ -56,57 +55,50 @@ box-sizing: border-box;
   line-height: 20px;
 }
 
-.header{
-
-}
-.header__text-container {
-  max-width: 709px;
-}
-.header__span-accent{
-}
 .header__title {
-  font-family: "Noto-serif",'Times New Roman', serif;
-  font-style: italic;
-  font-weight: normal;
+  max-width: 709px;
+  padding: 0;
+  font-family: "Inter", Arial, serif;
+  font-style: normal;
+  font-weight: 500;
   font-size: 58px;
   line-height: 72px;
-  color:#2f80ed;
-  margin: 128px 0 0;
-  padding: 0;
+  letter-spacing: -1px;
+  margin: 183px 0 28px 80px;
+}
+
+.header__span-accent{
+  font-family: "Noto Serif", 'Times New Roman', serif;
+ font-style: italic; 
+ font-weight: normal;
+ font-size: 58px;
+ line-height: 72px;
+ color: #2F80ED;
 }
 
 .header__description {
+  font-family:"Noto Serif", 'Times New Roman', serif;
+  font-style: normal;
+  font-weight:normal;
   font-size: 20px;
   line-height: 30px;
   max-width: 683px;
-  margin: 32px 0 0;
+  margin:0 0 0 80px;
   padding: 0;
 }
-/*header__image se puede usar con posición absoluta*/
 .header__image {
 height: 568px;
 width: 646px;
 position: absolute;
 top: 124px;
-right: 5px;
+right: 0px;
 }
 
 .header__footer {
-  margin-top: auto;
   width: 100%;
+  background-color: red;
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  box-sizing: border-box;
-}
-
-.header__link {
-  color: #2f80ed;
-  text-decoration: none;
-}
-
-.header__address {
-  margin: 0;
-  color: #838383;
+  justify-content: space-between;
+  list-style: none;
 }
   
