--- a/pages/index.css
+++ b/pages/index.css
@@ -101,4 +101,61 @@ right: 0px;
   justify-content: space-between;
   list-style: none;
 }
-  
+.content{
+  min-height: 720px;/* de acuerdo a brief */
+  max-height: 800px;/* de acuerdo a brief */
+  background-color: #0a2750;/* de acuerdo a brief */
+  background-image: url(../images/background_recipes.svg);/* de acuerdo a brief */
+  background-repeat: no-repeat;/* de acuerdo a brief */
+  background-size: cover;/* de acuerdo a brief */
+  background-position: 50% 50%;/* de acuerdo a brief */
+  display: flex;
+  flex-direction: column;
+}
+.recipes{
+  display: flex;
+  flex-direction:column;
+}
+
+.recipes__title{
+  max-width: 580px;
+  font-style:normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  margin:100px 0 0 80px;
+  font-family:"Inter", Arial, serif;
+  color:#FFFFFF;
+}
+.recipes__subtitle{
+  font-family: "Noto Serif", 'Times New Roman', serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 438px;
+  margin: 24px 0 80px 80px;
+  color:#FFFFFF;
+}
+.recipes__videos{
+  display:flex;
+  flex-direction: row;
+  column-gap: 40px;
+  margin:0 auto;
+}
+.recipes__video-item{
+  width: 480px;
+  height: 273px;
+}
+.recipes__iframe{
+  width: 480px;
+}
+.recipes__video-caption{
+font-family:"Inter", Arial, serif;
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 30px;
+margin:24px 0 0;
+color:#FFFFFF
+  }
