--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,7 @@
  margin: 0px;
 padding: 0px;
 box-sizing: border-box;
-} /*elimina los margenes por defecto del navegador*/
+}
 
 .page{
     min-width: 1100px;
@@ -11,14 +11,14 @@ box-sizing: border-box;
 
 
 .header {
-  min-height: 720px;/* de acuerdo a brief */
-  max-height: 800px;/* de acuerdo a brief */
+  min-height: 720px;
+  max-height: 800px;
   height: 100vh;
-  background-color: #FFFFFF;/* de acuerdo a brief */
-  background-image: url(../images/background_header.svg);/* de acuerdo a brief */
-  background-repeat: no-repeat;/* de acuerdo a brief */
-  background-size: cover;/* de acuerdo a brief */
-  background-position: 50% 50%;/* de acuerdo a brief */
+  background-color: #FFFFFF;
+  background-image: url(../images/background_header.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
   display: flex;
   flex-direction: column;
 }
@@ -31,19 +31,19 @@ box-sizing: border-box;
 }
 
 .nav__logo {
-  width: 105px;/* de acuerdo a brief */
-  height: 39px;/* de acuerdo a brief */
-  position: relative; /*de acuerdo a brief */
-  top: 30px;/* de acuerdo a brief */
-  left: 30px;/* de acuerdo a brief */
+  width: 105px;
+  height: 39px;
+  position: relative;
+  top: 30px;
+  left: 30px;
 }
 
 .nav__links {
   display:flex;
   flex-direction: row;
   justify-content: space-between;
-  column-gap: 20px; /*de acuerdo al brief*/
-  list-style-type: none; /*de acuerdo al brief*/
+  column-gap: 20px;
+  list-style-type: none;
   margin: 30px 80px 0 0;
 }
 
@@ -112,7 +112,7 @@ right: 5px;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  color: #6F6F6F;
+  color: #838383;
 }
 .header__pharagraph_address{
   display:flex;
@@ -121,15 +121,16 @@ right: 5px;
   margin-bottom: 40px;
   z-index: 100;
 }
+/*
 
 .content{
-  min-height: 720px;/* de acuerdo a brief */
-  max-height: 800px;/* de acuerdo a brief */
-  background-color: #0a2750;/* de acuerdo a brief */
-  background-image: url(../images/background_recipes.svg);/* de acuerdo a brief */
-  background-repeat: no-repeat;/* de acuerdo a brief */
-  background-size: cover;/* de acuerdo a brief */
-  background-position: 50% 50%;/* de acuerdo a brief */
+  min-height: 720px;
+  max-height: 800px;
+  background-color: #0a2750;
+  background-image: url(../images/background_recipes.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
   display: flex;
   flex-direction: column;
 }
