--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,13 @@
 padding: 0px;
 box-sizing: border-box;
 }
+h2{
+  font-family: "Inter", Arial, serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
 
 .page{
     min-width: 1100px;
@@ -125,6 +132,7 @@ right: 5px;
 .content{
   min-height: 720px;
   max-height: 800px;
+  height: 100vh;
   background-color: #0a2750;
   background-image: url(../images/background_recipes.svg);
   background-repeat: no-repeat;
@@ -139,13 +147,7 @@ right: 5px;
 }
 
 .recipes__title{
-  max-width: 580px;
-  font-style:normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
   margin:100px 0 0 80px;
-  font-family:"Inter", Arial, serif;
   color:#FFFFFF;
 }
 .recipes__subtitle{
@@ -160,18 +162,22 @@ right: 5px;
 }
 .recipes__videos{
   display:flex;
-  flex-direction: row;
-  column-gap: 40px;
-  margin:0 auto;
+  justify-content: center;
+column-gap:40px;
+
 }
 .recipes__video-item{
-  width: 480px;
-  height: 273px;
+  display:flex;
+  flex-direction: column;
 }
 .recipes__iframe{
   width: 480px;
+  height: 273px;
+  border: 0px;
 }
 .recipes__video-caption{
+display: flex;
+justify-content: space-between;
 font-family:"Inter", Arial, serif;
 font-style: normal;
 font-weight: 500;
@@ -179,4 +185,5 @@ font-size: 20px;
 line-height: 30px;
 margin:24px 0 0;
 color:#FFFFFF
+
   }
