--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,15 @@
 padding: 0px;
 box-sizing: border-box;
 }
+.page{
+  min-width: 1100px;
+  max-width: 1600px;
+  font-family:"Inter", Arial, serif;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0 auto;
+}
+
 h2{
   font-family: "Inter", Arial, serif;
   font-style: normal;
@@ -10,12 +19,6 @@ h2{
   font-size: 44px;
   line-height: 52px;
 }
-
-.page{
-    min-width: 1100px;
-    max-width: 1600px;
-}
-
 
 .header {
   min-height: 720px;
