--- a/pages/index.css
+++ b/pages/index.css
@@ -114,6 +114,11 @@ right: 5px;
 .header__footer_pharagraphs{
   margin-left: 80px;
   margin-bottom: 40px;
+  display:flex;
+  flex-direction:column;
+  align-items:last baseline;
+}
+li{
   list-style: none;
 }
 .header__pharagraph{
@@ -124,9 +129,7 @@ right: 5px;
   line-height: 20px;
   color: #838383;
 }
-.header__pharagraph_address{
-  display:flex;
-  align-items: flex-end;
+.header__footer_element-container_address{
   margin-right:80px;
   margin-bottom: 40px;
   z-index: 100;
