--- a/pages/index.css
+++ b/pages/index.css
@@ -108,15 +108,13 @@ right: 5px;
 
 .header__footer {
   display: flex;
-  margin-top:auto;
   justify-content: space-between;
+  margin:auto 0px 40px;
 }
-.header__footer_timetable{
-  margin-left: 80px;
-  margin-bottom: 40px;
-  display:flex;
+.header__timetable{
   flex-direction:column;
 }
+
 .header__pharagraph{
   font-family: "Inter", Arial, serif;
   font-style: normal;
@@ -124,11 +122,13 @@ right: 5px;
   font-size: 16px;
   line-height: 20px;
   color: #838383;
+  margin-left:80px;
 }
-.header__footer_address{
+.header__address{
   margin-right: 80px;
-  margin-bottom: 40px;
+  align-content:end;
 }
+
 
 .content{
   min-height: 720px;
