--- a/pages/index.css
+++ b/pages/index.css
@@ -115,7 +115,7 @@ right: 5px;
   flex-direction:column;
 }
 
-.header__pharagraph{
+.header__paragraph{
   font-family: "Inter", Arial, serif;
   font-style: normal;
   font-weight: 500;
