--- a/pages/index.css
+++ b/pages/index.css
@@ -187,3 +187,59 @@ line-height: 30px;
 margin:24px 0 0;
 color:#FFFFFF
   }
+
+.reservation{
+  min-height: 720px;
+  max-height: 800px;
+  height: 100vh;
+  background-color: #D9E7FF;
+  background-image: url(../images/background_reservation.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reservation__title{
+  font-family: "Inter", Arial, serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;;
+}
+/*
+.form{}
+
+.reservation__form{}
+
+.form__fieldset{}
+
+.form__label{}
+
+.form__label_name{}
+*/
+
+.form__input{
+border-radius: 4px;
+}
+
+/*
+.form__input_name{}
+*/
+.form__button{
+  border-radius: 4px;
+}
+
+.form__button:hover{
+  opacity: 70%;
+}
+.form__checkbox{
+  border-radius: 2px;
+}
+
+
+
+
+
