--- a/pages/index.css
+++ b/pages/index.css
@@ -207,19 +207,55 @@ color:#FFFFFF
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
-  line-height: 52px;;
+  line-height: 52px;
+}
+
+
+.form{
+  max-width: 385px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.form::placeholder{
+  font-family: "Inter", Arial, serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
 }
 /*
-.form{}
-
 .reservation__form{}
 
 .form__fieldset{}
-
-.form__label{}
-
-.form__label_name{}
 */
+.form__label{
+  font-family: "Inter", Arial, serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+/*
+.form__label_name{}
+
+.form__label_number-guests{}
+
+.form__input_number-guests{}
+
+.form__label_datetime{}
+
+.form__input_datetime{}
+
+.form__label_email{}
+
+.form__input_email{}
+
+*/
+
+
 
 .form__input{
 border-radius: 4px;
@@ -234,6 +270,10 @@ border-radius: 4px;
 
 .form__button:hover{
   opacity: 70%;
+}
+
+.form__label_checkbox-container{
+  display:block;
 }
 .form__checkbox{
   border-radius: 2px;
