--- a/pages/index.css
+++ b/pages/index.css
@@ -189,9 +189,6 @@ color:#FFFFFF
   }
 
 .reservation{
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
   background-color: #D9E7FF;
   background-image: url(../images/background_reservation.svg);
   background-repeat: no-repeat;
@@ -208,23 +205,16 @@ color:#FFFFFF
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
+  margin:100px auto 80px;
 }
 
 
 .form{
   max-width: 385px;
   height: 100%;
-  display: flex;
-  flex-direction: column;
 }
 
-.form::placeholder{
-  font-family: "Inter", Arial, serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
+
 /*
 .reservation__form{}
 
@@ -259,24 +249,57 @@ color:#FFFFFF
 
 .form__input{
 border-radius: 4px;
+margin:8px 0 32px;
+height: 60px;
+width: 100%;
+box-sizing: border-box;
+padding:15px 0 15px 20px;
 }
 
+.form__input::placeholder{
+  font-family: "Inter", Arial, serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color:#838383;
+}
 /*
 .form__input_name{}
 */
 .form__button{
   border-radius: 4px;
+  background-color:#2f80ed;
+  font-family: "Inter", Arial, serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color:#FFFFFF;
+  margin-bottom: 32px;
+  max-width:385px;
+  width: 100%;
+  height:60px;
 }
 
 .form__button:hover{
+  background-color:#838383;
   opacity: 70%;
 }
 
 .form__label_checkbox-container{
-  display:block;
+  display:flex;
+margin-bottom: 120px;
+
+}
+
+.form__label_checkbox-text{
+  margin-left: 12px;
 }
 .form__checkbox{
   border-radius: 2px;
+  height: 20px;
+  width:20px;
 }
 
 
