--- a/pages/index.css
+++ b/pages/index.css
@@ -134,17 +134,20 @@ right: 5px;
   min-height: 720px;
   max-height: 800px;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+/*sección de recetas*/
+
+.recipes{
+  display: flex;
+  flex-direction:column;
   background-color: #0a2750;
   background-image: url(../images/background_recipes.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  display: flex;
-  flex-direction: column;
-}
-.recipes{
-  display: flex;
-  flex-direction:column;
 }
 
 .recipes__title{
@@ -164,7 +167,8 @@ right: 5px;
 .recipes__videos{
   display:flex;
   justify-content: center;
-column-gap:40px;
+column-gap: 40px;
+margin-bottom: 215px;
 
 }
 .recipes__video-item{
@@ -187,6 +191,8 @@ line-height: 30px;
 margin:24px 0 0;
 color:#FFFFFF
   }
+
+  /*sección de reservas*/
 
 .reservation{
   background-color: #D9E7FF;
@@ -214,12 +220,6 @@ color:#FFFFFF
   height: 100%;
 }
 
-
-/*
-.reservation__form{}
-
-.form__fieldset{}
-*/
 .form__label{
   font-family: "Inter", Arial, serif;
   font-style: normal;
@@ -228,24 +228,9 @@ color:#FFFFFF
   line-height: 20px;
 }
 
-/*
-.form__label_name{}
-
-.form__label_number-guests{}
-
-.form__input_number-guests{}
-
-.form__label_datetime{}
-
-.form__input_datetime{}
-
-.form__label_email{}
-
-.form__input_email{}
-
-*/
-
-
+.form__fieldset{
+  border:unset;
+}
 
 .form__input{
 border-radius: 4px;
@@ -253,6 +238,7 @@ margin:8px 0 32px;
 height: 60px;
 width: 100%;
 box-sizing: border-box;
+border-color:#838383;
 padding:15px 0 15px 20px;
 }
 
@@ -264,9 +250,7 @@ padding:15px 0 15px 20px;
   line-height: 30px;
   color:#838383;
 }
-/*
-.form__input_name{}
-*/
+
 .form__button{
   border-radius: 4px;
   background-color:#2f80ed;
@@ -280,10 +264,10 @@ padding:15px 0 15px 20px;
   max-width:385px;
   width: 100%;
   height:60px;
+  border:unset;
 }
 
 .form__button:hover{
-  background-color:#838383;
   opacity: 70%;
 }
 
