--- a/pages/index.css
+++ b/pages/index.css
@@ -211,7 +211,8 @@ color:#FFFFFF
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  margin:100px auto 80px;
+  margin-top:100px;
+  margin-bottom: 80px;
 }
 
 
