--- a/pages/index.css
+++ b/pages/index.css
@@ -211,8 +211,8 @@ color:#FFFFFF
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  margin-top:100px;
-  margin-bottom: 80px;
+  padding-top: 100px;
+  margin: 0 auto 80px;
 }
 
 
