--- a/pages/index.css
+++ b/pages/index.css
@@ -1,295 +1,8 @@
-*{
- margin: 0px;
-padding: 0px;
-box-sizing: border-box;
-}
-.page{
-  min-width: 1100px;
-  max-width: 1600px;
-  font-family:"Inter", Arial, serif;
-  font-size: 16px;
-  line-height: 20px;
-  margin: 0 auto;
-}
-
-h2{
-  font-family: "Inter", Arial, serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.header {
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  background-color: #FFFFFF;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  display: flex;
-  flex-direction: column;
-}
-
-.nav {
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  position: relative;
-  top: 30px;
-  left: 30px;
-}
-
-.nav__links {
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
-  column-gap: 20px;
-  list-style-type: none;
-  margin: 30px 80px 0 0;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-family: "Inter", Arial, serif;
-  font-style:normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header__title {
-  max-width: 709px;
-  padding: 0;
-  font-family: "Inter", Arial, serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: -1px;
-  margin: 183px 0 28px 80px;
-}
-
-.header__span-accent{
-  font-family: "Noto Serif", 'Times New Roman', serif;
- font-style: italic; 
- font-weight: normal;
- font-size: 58px;
- line-height: 72px;
- color: #2F80ED;
-}
-
-.header__description {
-  font-family:"Noto Serif", 'Times New Roman', serif;
-  font-style: normal;
-  font-weight:normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 683px;
-  margin:0 0 0 80px;
-  padding: 0;
-}
-.header__image {
-height: 568px;
-width: 646px;
-position: absolute;
-top: 124px;
-right: 5px;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  margin:auto 0px 40px;
-}
-.header__timetable{
-  flex-direction:column;
-}
-
-.header__paragraph{
-  font-family: "Inter", Arial, serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  margin-left:80px;
-}
-.header__address{
-  margin-right: 80px;
-  align-content:end;
-}
-
-
-.content{
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-/*sección de recetas*/
-
-.recipes{
-  display: flex;
-  flex-direction:column;
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-.recipes__title{
-  margin:100px 0 0 80px;
-  color:#FFFFFF;
-}
-.recipes__subtitle{
-  font-family: "Noto Serif", 'Times New Roman', serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 438px;
-  margin: 24px 0 80px 80px;
-  color:#FFFFFF;
-}
-.recipes__videos{
-  display:flex;
-  justify-content: center;
-column-gap: 40px;
-margin-bottom: 215px;
-
-}
-.recipes__video-item{
-  display:flex;
-  flex-direction: column;
-}
-.recipes__iframe{
-  width: 480px;
-  height: 273px;
-  border: 0px;
-}
-.recipes__video-caption{
-display: flex;
-justify-content: space-between;
-font-family:"Inter", Arial, serif;
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 30px;
-margin:24px 0 0;
-color:#FFFFFF
-  }
-
-  /*sección de reservas*/
-
-.reservation{
-  background-color: #D9E7FF;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.reservation__title{
-  font-family: "Inter", Arial, serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  padding-top: 100px;
-  margin: 0 auto 80px;
-}
-
-
-.form{
-  max-width: 385px;
-  height: 100%;
-}
-
-.form__label{
-  font-family: "Inter", Arial, serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__fieldset{
-  border:unset;
-}
-
-.form__input{
-border-radius: 4px;
-margin:8px 0 32px;
-height: 60px;
-width: 100%;
-box-sizing: border-box;
-border-color:#838383;
-padding:15px 0 15px 20px;
-}
-
-.form__input::placeholder{
-  font-family: "Inter", Arial, serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color:#838383;
-}
-
-.form__button{
-  border-radius: 4px;
-  background-color:#2f80ed;
-  font-family: "Inter", Arial, serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color:#FFFFFF;
-  margin-bottom: 32px;
-  max-width:385px;
-  width: 100%;
-  height:60px;
-  border:unset;
-}
-
-.form__button:hover{
-  opacity: 70%;
-}
-
-.form__label_checkbox{
-  display:flex;
-  margin-bottom: 120px;
-  justify-content: center;
-
-}
-.form__checkbox{
-  border-radius: 2px;
-  height: 20px;
-  width:20px;
-}
-
-.form__span_checkbox{
-  margin-left: 12px;
-}
-
-
-
-
-
-
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/footer.css");
