--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,6 +9,7 @@
     background-position: 50% 50%;
     display: flex;
     flex-direction: column;
+    position: relative;
   }
   
   
@@ -54,10 +55,11 @@
   .header__footer {
     display: flex;
     justify-content: space-between;
-    margin:auto 0px 40px;
+    margin:auto 80px 40px;
   }
   .header__timetable{
     flex-direction:column;
+    margin: auto auto 0 0;
   }
   
   .header__paragraph{
@@ -67,9 +69,9 @@
     font-size: 16px;
     line-height: 20px;
     color: #838383;
-    margin-left:80px;
+    margin: auto 0;
   }
   .header__address{
-    margin-right: 80px;
+    margin: auto 0 0 auto;
     align-content:end;
   }
