--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,15 +1,13 @@
-*{
-    margin: 0px;
-   padding: 0px;
-   box-sizing: border-box;
-   }
+
    .page{
      min-width: 1100px;
      max-width: 1600px;
      font-family:"Inter", Arial, serif;
      font-size: 16px;
      line-height: 20px;
-     margin: 0 auto;
+     margin: auto;
+     display:flex;
+    flex-direction: column;
    }
    
    h2{
