--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,15 +1,44 @@
 .footer{
-    background-color: #0A2850;
-    height:100%;
-    margin-top:auto;
+background-color: #0A2850;
+display:flex;
+position: relative;
+overflow: hidden;
 }
+
+.footer__circle{
+    background-color: #2F80ED;
+    border-radius: 100%;
+    height: 340px;
+    width: 340px;
+    position:absolute;
+    top: -128px;
+    left: -44px;
+    z-index: 2;
+}
+
 .footer__content{
-    display:flex;
-    flex-direction:column;
-    width:100%;
-    margin:60px 80px auto;
+width: 100%;
+margin: 60px 80px auto;
+display: flex;
+justify-content: space-between;
+z-index: 3;
 }
+
 .footer__logo{
-width:105px;
+width: 105px;
 height: 39px;
+
 }
+.footer__social{
+}
+
+.footer__social-heading{
+color:#ffff;
+}
+
+.footer__list{
+}
+
+
+
+
