--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,10 +1,10 @@
-.content{
+/*.content{
     min-height: 720px;
     max-height: 800px;
     height: 100vh;
     display: flex;
     flex-direction: column;
-  }
+  }*/
   
   .recipes{
     display: flex;
