--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,7 @@
 .footer{
 background-color: #0A2850;
 display:flex;
+flex-direction: column;
 position: relative;
 overflow: hidden;
 height: 100%;
@@ -18,7 +19,6 @@ height: 100%;
 }
 
 .footer__content{
-width: 100%;
 margin: 60px 80px auto;
 display: flex;
 justify-content: space-between;
@@ -48,13 +48,19 @@ line-height: 20px;
 
 .footer__list{
 list-style: none;
+margin:0;
 padding: 0;
 }
 
+.footer__list:last-of-type{
+    margin-bottom: 0;
+}
+
+
 .footer__list-item{
 display: flex;
-flex-direction:row;
 column-gap: 10px;
+margin-bottom: 16px;
 
 }
 
@@ -70,9 +76,13 @@ font-style: normal;
 font-weight: normal;
 font-size: 16px;
 line-height: 20px;
+text-decoration: none;
 }
 
 .footer__copyright{
+    z-index:4;
+    color:#ffff;
+    margin:108px auto 60px 80px;
 }
 
 
