--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -79,10 +79,21 @@ line-height: 20px;
 text-decoration: none;
 }
 
+.footer__social-link:hover{
+    color:#c1c1c1;
+
+
+}
+
 .footer__copyright{
     z-index:4;
     color:#ffff;
     margin:108px auto 60px 80px;
+    font-family: "Inter", Arial, serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 
