Sprint-4__Stage-5-Rev7 autorevisión completa

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -59,7 +59,6 @@ padding: 0;
 
 .footer__list-item{
 display: flex;
-column-gap: 10px;
 margin-bottom: 16px;
 
 }
@@ -67,6 +66,7 @@ margin-bottom: 16px;
 .footer__social-icon{
 height: 16px;
 width: 16px;
+margin-right: 10px;
 }
 
 .footer__social-link{
